Projet-3/Booki/css/style.css
/****** General ***********/
* {
    font-family: "Raleway", sans-serif;
}

:root {
    --main-color: #0065fc;
    --main-bg-color: #f2f2f2;
    --filter-bg-color: #deebff;
}

.fa-solid {
    color: var(--main-color);
}

body {
    display: flex;
    justify-content: center;
    margin: 0;
    padding: 0;
}

h1 {
    font-size: 22px;
}
.mouse-pointer {
    cursor: pointer;
}
.text-bold {
    font-weight: 700;
}
.main-container {
    width: 100%;
    max-width: 1440px;
    padding: 0 50px;
    box-sizing: border-box;
}

.section-title {
    margin: 0;
    font-size: 22px;
}

.card {
    background-color: white;
    border-radius: 20px;
    padding: 5px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
    object-fit: cover;
    width: 100%;
}

.card-title {
    font-size: 16px;
    padding-bottom: 5px;
    margin: 4px 0 8px 0;
}

.card-rating i {
    padding: 0;
}

.card-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.euro {
    font-weight: 700;
}

.neutral-star {
    color: var(--main-bg-color);
}

/* Header */
.header {
    display: flex;
    justify-content: space-between;
}
.header-logo {
    height: 20px;
    padding: 30px 50px 30px 0px;
}

.header-links {
    padding-top: 16px;
}
.header-links a {
    text-decoration: none;
    padding-top: 14px;
    margin-left: 68px;
    color: black;
}
.header-links a:hover {
    border-top: 2px solid var(--main-color);
    color: var(--main-color);
}

/****** Section Intro ***********/
.search-bar {
    display: flex;
    align-items: center;
    margin-top: 35px;
    margin-bottom: 35px;
}

.search-bar-icon {
    background-color: var(--main-bg-color);
    color: black;
    padding: 16px;
    border-radius: 10px 0px 0px 10px;
}

.search-bar-magnif {
    display: none;
    color: white;
    background-color: var(--main-color);
    padding: 16px;
    border-radius: 15px;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
}
.section-search h1 {
    margin: 0 0 8px 0;
}
.section-search-p {
    margin: 0;
}

.search-bar p {
    padding: 15px 24px;
}
.search-bar-city {
    box-sizing: border-box;
    height: 48px;
    border-top: 1px solid;
    border-bottom: 1px solid;
    border-color: var(--main-bg-color);
}

i {
    padding-right: 15px;
}
.search-bar-button {
    color: white;
    background-color: var(--main-color);
    border-radius: 0px 10px 10px 0px;
}

/****** Filters ***********/
.filters {
    display: flex;
    margin-bottom: 35px;
    align-items: center;
}
.filters h3 {
    font-size: 18px;
}
.filters-main {
    display: flex;
}
.filters-div {
    padding-right: 20px;
    margin-left: 15px;
    border-radius: 36px;
    display: flex;
    align-items: center;
    border: 2px solid var(--main-bg-color);
    height: 45px;
}
.filters-div:hover {
    background-color: var(--filter-bg-color);
}
.filters-div i {
    padding: 16px;
}
.filters-info {
    margin-bottom: 35px;
}

/****** Hebergements And Populaires ***********/
.hebergements-and-populaires {
    display: flex;
    justify-content: space-between;
}

.hebergements-and-populaires section {
    border-radius: 20px;
    box-sizing: border-box;
}

.card-subtitle {
    font-size: 14px;
    margin-bottom: 8px;
}
/****** Hebergements ***********/
.hebergements {
    width: 85%;
    margin-right: 40px;
    padding: 30px;
    background-color: var(--main-bg-color);
}

.hebergements-cards {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap: 30px;
    padding-top: 30px;
}
.hebergements-cards .card {
    width: 100%;
}
.hebergements-cards img {
    height: 124px;
    border-radius: 20px 20px 0px 0px;
}

.hebergements-cards .card-content {
    position: relative;
    padding-left: 15px;
    padding-right: 15px;
}

.hebergements-cards .card-title {
    position: absolute;
    white-space: nowrap;
    width: 80%;
    overflow: hidden;
    text-overflow: ellipsis;
    padding-top: 4px;
}
.hebergements-cards .card-subtitle {
    position: relative;
    margin-top: 36px;
}

.hebergements-plus {
    font-size: 18px;
    font-weight: 700;
    margin: 30px 0 0 0;
}

/****** Populaires ***********/
.populaires {
    padding: 30px 30px 0px 30px;
    background-color: var(--main-bg-color);
}

.populaires-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.populaires-cards .card {
    display: flex;
    margin-top: 33px;
}

.populaires-cards img {
    width: 33%;
    height: 136px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.populaires-cards .card-content {
    width: 67%;
    padding-left: 15px;
    padding-right: 5px;
}

.populaires-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.populaires-cards .card-subtitle {
    margin: 0;
}

.populaires-cards .card-rating {
    margin-bottom: 5px;
}

/****** Activités ***********/
.activites {
    width: 100%;
    padding-top: 35px;
}
.activites-cards {
    display: flex;
    justify-content: space-between;
    padding-left: 30px;
}

.activites h2 {
    margin-left: 30px;
}

.activites-cards .card {
    padding: 0;
    margin-right: 30px;
    width: 100%;
}

.activites-cards .card img {
    height: 380px;
    border-radius: 20px 20px 0 0;
}
.activites-cards .activites-title {
    margin: 20px 19px;
}

/****** Activités ***********/
footer {
    display: flex;
    background-color: var(--main-bg-color);
    padding: 0;

    margin-top: 35px;
}

.footer-content {
    padding: 20px;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-content: space-between;
}

.footer-content a {
    text-decoration: none;
    color: black;
    padding-top: 15px;
}

.footer-title {
    font-size: 18px;
    font-weight: 700;
    margin: 0;
}
/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/
/* Medium devices (tablets, less/equal than 1024px) */
@media (max-width: 1024px) {
    /*Scrollbar disable*/
    html::-webkit-scrollbar {
        display: none;
    }

    html {
        scrollbar-width: none;
    }

    .filters {
        display: block;
    }
    .hebergements {
        width: 100%;
    }
    .hebergements-and-populaires {
        flex-direction: column;
    }

    .hebergements-cards .card-rating {
        padding-bottom: 5px;
    }
    .populaires {
        width: 100%;
        margin-top: 50px;
        padding-bottom: 30px;
    }

    .populaires-cards {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .populaires-cards .card {
        width: 30%;
    }

    .populaires-cards .card-title {
        font-size: 14px;
    }

    .populaires-cards .card-subtitle {
        font-size: 13px;
        margin: 0;
    }
    .populaires-cards .card-rating {
        margin-bottom: 5px;
    }

    .activites-cards .card img {
        height: 210px;
    }
}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {
    /*Scrollbar disable*/
    html::-webkit-scrollbar {
        display: none;
    }

    html {
        scrollbar-width: none;
    }

    .main-container {
        padding: 0;
    }
    /* HEADER */
    .header {
        display: block;
        text-align: center;
    }
    .header-logo {
        padding: 30px;
    }
    .header-links {
        padding: 0;
        display: flex;
        justify-content: space-around;
    }
    .header-links a {
        padding: 0 0 15px;
        margin: 0;
        width: 100%;
    }

    .header-links a:hover {
        border-top: none;
        box-shadow: inset 0 -2px 0 var(--main-color); /*border bottom faisait bouger les div*/
    }
    .header-links a:active {
        border-top: none;
        border-bottom: 2px solid var(--main-color);
    }

    /*Search*/
    .section-search {
        padding: 0 20px;
    }
    .section-search h1 {
        margin: 30px 0 8px;
    }
    .section-search p {
        margin: 0;
    }

    .search-bar {
        justify-content: space-between;
        margin: 35px 0 35px;
    }
    .search-bar-button {
        display: none;
    }
    .search-bar-city {
        width: 100%;
    }
    .search-bar-magnif {
        display: block;
    }

    /* Filters */
    .filters {
        padding: 0 20px;
    }
    .filters-main {
        padding-top: 20px;
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 10px;
    }
    .filters-div {
        margin: 0 0 10px;
    }
    .filters p {
        margin: 0;
        font-size: 14px;
    }
    .filters h3 {
        margin-bottom: 0;
    }

    .filters-info {
        margin-top: 25px;
        margin-bottom: 35px;
        padding: 0 20px;
    }

    /* Hebergement */

    .hebergements {
        margin: 15px 0 0 0;
        padding: 20px;
        background-color: white;
    }
    .hebergements-and-populaires {
        flex-direction: column-reverse;
    }
    .hebergements-and-populaires section {
        border-radius: 0px;
    }

    .hebergements-cards {
        display: block;
    }
    .hebergements-cards .card {
        margin-top: 15px;
    }
    .hebergements-plus {
        margin-top: 15px;
    }
    .populaires {
        margin: 0;
        padding: 30px 20px;
        background-color: var(--main-bg-color);
    }

    .populaires i {
        padding: 0;
    }
    .populaires-cards {
        flex-direction: column;
        justify-content: flex-start;
    }
    .populaires-cards .card {
        width: auto;
        margin-top: 15px;
    }

    /* Activité */
    .activites {
        margin: 0;
    }
    .activites-cards {
        display: block;
        padding: 30px;
    }
    .activites h2 {
        padding-left: 30px;
        padding-top: 30px;
        margin: 0;
    }
    .activites-cards .card {
        margin-top: 15px;
    }
    .activites-cards .activites-title {
        display: flex;
        padding: 20px;
        margin: 0;
        align-items: center;
    }
    /* Footer */

    footer {
        flex-direction: column;
        padding: 30px 30px 0 30px;
        margin-top: 30px;
    }
    .footer-content {
        padding: 0;
        margin-bottom: 50px;
    }
}

